# midi-langs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  PROJECT_REVIEW.md  README.md  TODO.md  midi_forth  midi_forth.c
.github/workflows/: build-all.yml  build-test.yml  build-windows-mhs.yml  build-windows.yml  ci.yml
docs/: async-models.md  async-support.md  data_structures.md  language-comparison.md  missing-forth-features.md  sequences.md  spec.md
docs/alda-midi/: README.md  TODO.md  examples.md  language-reference.md
docs/alda-midi/alda-language/: README.md  alda-overview.md  attributes.md  implementing-an-alda-library.md  instance-and-group-assignment.md  list-of-instruments.md  markers.md  notes.md  offset.md  repeats.md  rests.md  scores-and-parts.md  voices.md  writing-music-programmatically.md
docs/alda-midi/examples/: bach-prelude.alda  chords.alda  cram.alda  duet.alda  jazz.alda  markers.alda  orchestra.alda  repeats.alda  simple.alda  twinkle.alda  voices.alda
docs/forth-midi/: README.md  TODO.md  api-reference.md  bracket_syntax.md  data_structures.md  missing-forth-features.md  scales.md  sequences.md  syntax.md
docs/guile-midi/: README.md  api-reference.md  architecture.md  examples.md  wisp-syntax.md
docs/joy-midi/: README.md  next-steps.md  plan.md
docs/lua-midi/: README.md  TODO.md  api-reference.md  architecture.md  examples.md
docs/mhs-midi/: README.md  TODO.md  api-reference.md  architecture.md  examples.md  known-issues.md  mhs-pkg-build.md  mhs-standalones.md  overview.md  self-contained.md  standalone-article.md  windows-support.md
docs/midi-forth/: new_features.md  syntax.md  tutorial.md
docs/pktpy-midi/: README.md  TODO.md  api-reference.md  architecture.md
docs/s7-midi/: README.md  TODO.md  api-reference.md  architecture.md  examples.md
examples/: README.md  concurrent_lua.lua  frere_jacques.joy  functional_s7.scm  generative_pktpy.py  melody_forth.4th  ode_to_joy.joy  pure_mhs.hs
projects/alda-midi/: CMakeLists.txt
projects/alda-midi/cli/: CMakeLists.txt
projects/alda-midi/cli/src/: main.c
projects/alda-midi/include/alda/: async.h  context.h  instruments.h  interpreter.h  midi_backend.h  scheduler.h  tsf_backend.h
projects/alda-midi/lib/: CMakeLists.txt
projects/alda-midi/lib/include/alda/: alda.h  async.h  context.h  interpreter.h  midi_backend.h  scheduler.h  tokens.h
projects/alda-midi/lib/src/: async.c  attributes.c  context.c  instruments.c  interpreter.c  midi_backend.c  parser.c  scanner.c  scheduler.c  tokens.c
projects/alda-midi/src/: ast.c  async.c  attributes.c  context.c  interpreter.c  main.c  midi_backend.c  parser.c  scanner.c  scheduler.c  tsf_backend.c
projects/alda-midi/tests/: CMakeLists.txt
projects/common/: CMakeLists.txt  midi_file.cpp  midi_file.h  music_theory.c  music_theory.h
projects/forth/: CMakeLists.txt
projects/forth-midi/: CMakeLists.txt  async_player.c  context.c  dictionary.c  forth_midi.c  forth_midi.h  generative.c  interpreter.c  main.c  midi_core.c  notation.c  packed_notes.c  patterns.c  primitives.c  readline_comp.c  recording.c  scales.c  sequences.c  stack.c
projects/guile-midi/: CMakeLists.txt  main.c  midi_module.c  prelude.scm  scheduler.c  scheduler.h  scm_prelude.h
projects/joy-midi/: CMakeLists.txt  joy_midi.c  joy_midi.h  main.c  midi_primitives.c  midi_primitives.h  music_context.c  music_context.h  music_notation.c  music_notation.h  prelude.joy
projects/joy-midi/joy/: joy_parser.c  joy_primitives.c
projects/lua-midi/: CMakeLists.txt  lua_prelude.h  main.c  midi_module.c  prelude.lua  scheduler.c  scheduler.h
projects/lua_midi/: CMakeLists.txt  main.c  midi_module.c
projects/mhs-midi/: CMakeLists.txt  mhs_midi_main.c  mhs_midi_standalone_main.c  midi_ffi.c  midi_ffi.h  midi_ffi_wrappers.c  vfs.c  vfs_unified.c
projects/mhs-midi/lib/: Midi.hs  MidiPerform.hs  Music.hs  TestMusic.hs
projects/mhs_midi/: CMakeLists.txt  midi_ffi.c  midi_ffi.h
projects/mhs_midi/examples/: Arpeggio.hs  Chords.hs  HelloMidi.hs  ListPorts.hs  Melody.hs
projects/mhs_midi/lib/: Midi.hs  MidiRepl.hs  Music.hs
projects/midi_forth/: CMakeLists.txt  midi_forth.c
projects/pktpy-midi/: CMakeLists.txt  main.c  midi_module.c  prelude.py  py_prelude.h  scheduler.c
projects/pktpy_midi/: CMakeLists.txt  main.c  midi_module.c
projects/s7-midi/: CMakeLists.txt  main.c  midi_module.c  prelude.scm  scheduler.c  scm_prelude.h
projects/s7_midi/: CMakeLists.txt  main.c  midi_module.c
scripts/: ctidy.py  embed_libs.c  embed_libs.py  fix-markdown-tables.py  mhs-embed.c  mhs-embed.py  mhs-midi  mhs-patch-eval.py  mhs-pkg.sh  prelude2c.py  py2c.py
tests/: CMakeLists.txt  out.comb  test_alda_midi.sh  test_forth_midi.sh  test_forth_midi_unit.c  test_lua_midi.sh  test_mhs_midi.sh  test_midi_forth.sh  test_pktpy_midi.sh  test_s7_midi.sh
tests/alda/: basic.alda
tests/examples/: demo_joy.joy
tests/golden/: test_async.4th  test_basic.4th  test_blocks.4th  test_generative.4th  test_notation.4th  test_seq_record.4th  test_sequences.4th
tests/joy-midi/: run_single_joy_test.sh
tests/joy-midi/joy/: argv.joy  eql2.joy  ftell.joy  get.joy  maxint.joy  mktime.joy  null.joy
tests/mhs/: TestCompile.hs
